Solved offscreen content tabindexing

--- a/lesson2-focus/04-offscreen-content/blog.css
+++ b/lesson2-focus/04-offscreen-content/blog.css
@@ -169,6 +169,6 @@ h6, .h6 {
 }
 
 .modal {
-  display: block;
-  left: 9999px;
+  display: none;
+  /*left: 9999px;*/
 }
